--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/hocsinh
 spring.datasource.username=root
 spring.datasource.password=12345Aa@
 spring.jpa.hibernate.ddl-auto=update
+
+api_prefix = api/v1
